--- a/10_04_tojiUseRegul_tab01.html
+++ b/10_04_tojiUseRegul_tab01.html
@@ -15,13 +15,13 @@
 			</colgroup>
 			<tbody>
 				<tr>
-					<th>지목</td>
+					<th>지목</th>
 					<td>대</td>
 
-					<th>면적</td>
+					<th>면적</th>
 					<td>122,682㎡</td>
 
-					<th>공시지가</td>
+					<th>공시지가</th>
 					<td>2017-01 → 9,850,000원 / ㎡</td>
 				</tr>
 			</tbody>
