--- a/20_01_dvTooja_tab01.html
+++ b/20_01_dvTooja_tab01.html
@@ -22,7 +22,7 @@ $(document).ready( function() {
 				</colgroup>
 				<tbody>
 					<tr>
-						<th>도시계획시설</td>
+						<th>도시계획시설</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -84,7 +84,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>보상편입여부</td>
+						<th>보상편입여부</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -118,7 +118,7 @@ $(document).ready( function() {
 				</colgroup>
 				<tbody>
 					<tr>
-						<th>지역</td>
+						<th>지역</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -191,7 +191,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>지목</td>
+						<th>지목</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -304,7 +304,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>공시지가</td>
+						<th>공시지가</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -352,7 +352,7 @@ $(document).ready( function() {
 				</colgroup>
 				<tbody>
 					<tr>
-						<th>용도지역</td>
+						<th>용도지역</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -385,7 +385,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>용도지구</td>
+						<th>용도지구</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -438,7 +438,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>용도구역</td>
+						<th>용도구역</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -467,7 +467,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>기타법률상규제</td>
+						<th>기타법률상규제</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -544,7 +544,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>기타참고사항</td>
+						<th>기타참고사항</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -578,7 +578,7 @@ $(document).ready( function() {
 				</colgroup>
 				<tbody>
 					<tr>
-						<th>HP등급</td>
+						<th>HP등급</th>
 						<td>							
 							<!-- HP등급 Range -->
 							<div class="rangeSliderWrap">
@@ -588,7 +588,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>경사도</td>
+						<th>경사도</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -601,7 +601,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>접도현황</td>
+						<th>접도현황</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
@@ -615,7 +615,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>환경평가등급<span class="subTh block">(1등급:투자유의)</span></td>
+						<th>환경평가등급<span class="subTh block">(1등급:투자유의)</span></th>
 						<td>
 							<!-- 환경평가등급 Range -->
 							<div class="rangeSliderWrap">
@@ -625,7 +625,7 @@ $(document).ready( function() {
 						</td>
 					</tr>
 					<tr>
-						<th>토지이용규제해소물건</td>
+						<th>토지이용규제해소물건</th>
 						<td>
 							<span class="rdchBox">
 								<input type="checkbox" id="" name="" />
