--- a/z_z_index.html
+++ b/z_z_index.html
@@ -65,7 +65,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 	<li class="" style="margin:0 0px 0 30px; background:#f1f1f1;"><a href="#" class="inc_30" name="inc_30">css, js<span class="new">N</span></a></li>
 	<li class="" style="background:#f1f1f1;"><a href="#" class="inc_31" name="inc_31">이미지<span class="new">N</span></a></li>
 </ul>
-<div id="inc_99" class="codeList" style="">
+<div id="inc_99" class="codeList" style="display:none;">
 	<ul>
 		<li class="ulHead">
 			<span>구분</span>
@@ -156,7 +156,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 </div>
 
 <!-- 주소검색 -->
-<div id="inc_01" class="codeList" style="display:none;">
+<div id="inc_01" class="codeList" style="display:;">
 	<ul>
 		<li class="ulHead">
 			<span>구분</span>
@@ -173,6 +173,15 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="ex">좌메뉴 주소검색 - index.html에 inculde되는 좌메뉴</span>
 			<span class="end">완성</span>
 			<span class="date">2018.01.18</span>
+			<span class="etc"></span>
+		</li>
+
+		<li>
+			<span>주소검색 > 수지분석</span>
+			<span class="link" data-type="modal" data-width="full">10_01_profit.html</span>
+			<span class="ex">수지분석</span>
+			<span class="end">미완성</span>
+			<span class="date"></span>
 			<span class="etc"></span>
 		</li>
 
@@ -336,7 +345,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link" data-type="modal" data-width="full">30_01_gyeongmaeDetail.html</span>
 			<span class="ex">좌메뉴 경•공매 물건 상세보기</span>
 			<span class="end">완성</span>
-			<span class="date">2018.02.14</span>
+			<span class="date">2018.02.20</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -414,7 +423,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link"  data-type="modal" data-width="1000">70_02_noticeList.html</span>
 			<span class="ex">공지사항</span>
 			<span class="end">완성</span>
-			<span class="date">2018.02.13</span>
+			<span class="date">2018.02.20</span>
 			<span class="etc"></span>
 		</li>
 		<li>
@@ -498,7 +507,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../css/map.css</span>
 			<span class="ex">실제 컨텐츠를 제어하는 css<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.13</span>
+			<span class="date">2018.02.20</span>
 			<span class="etc"></span>
 		</li>
 		
@@ -510,7 +519,25 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../js/main.js</span>
 			<span class="ex">실제 컨텐츠를 제어하는 js<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.02.13</span>
+			<span class="date">2018.02.20</span>
+			<span class="etc"></span>
+		</li>
+
+		<!------------------>
+		<li  style="border-top:1px solid #222;">
+			<span>js파일 </span>
+			<span class="link">../js/vendors/touchSlider/jquery.event.drag-1.5.1.min.js</span>
+			<span class="ex">추가 플러그인</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.20</span>
+			<span class="etc"></span>
+		</li>
+		<li>
+			<span>js파일 </span>
+			<span class="link">../js/vendors/touchSlider/jquery.touchSlider.js</span>
+			<span class="ex">추가 플러그인</span>
+			<span class="end">완성</span>
+			<span class="date">2018.02.20</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -617,7 +644,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 
 		$('.codeList li span.date').each(function() {
 			var text = $(this).text();
-			if (text == '2018.02.13') {
+			if (text == '2018.02.20') {
 				$(this).css( {
 					'background':'black',
 					'color':'#fff',
@@ -631,7 +658,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 		$('span.new').removeClass('open');
 		$('.codeList span.date').each(function() {
 			var text = $(this).text();			
-			if (text == '2018.02.13') {
+			if (text == '2018.02.20') {
 				var parents = $(this).parents('.codeList').attr('id');				
 				$('.' + parents).find('span.new').addClass('open');
 				return;
