--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 <!-- uploadify -->
 <script type="text/javascript" src="vendors/jQuery-Upload-File/4.0.11/jquery.uploadfile.js"></script>
 
+<!-- 리포트 관련 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>
+<script src="vendors/PDF/html2canvas.min.js"></script>
+
+
+
 <script type="text/javascript" src="js/main.js"></script>
 
 <script type="text/javascript">
