--- a/z_z_index.html
+++ b/z_z_index.html
@@ -184,6 +184,14 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="date">2018.02.23</span>
 			<span class="etc"></span>
 		</li>
+		<li>
+			<span>주소검색 > 수지분석</span>
+			<span class="link">10_01_01_profit_result.html</span>
+			<span class="ex">수지분석 결과</span>
+			<span class="end">미완성</span>
+			<span class="date"></span>
+			<span class="etc"></span>
+		</li>
 
 		<li>
 			<span>주소검색 > 관심물건 등록</span>
