--- a/10_01_01_profit_result.html
+++ b/10_01_01_profit_result.html
@@ -14,6 +14,32 @@
 
 <div id="reportPdf" class="reportPdf pageA4">
 	<div class="indexPage">
+		<div class="indexUnit indexTit">
+			<span class="juso">서울시 종로구 계동 56-1번지</span>
+			<span class="bTit">
+				<em class="kor">수지분석 보고서</em>
+				<em class="eng">Balance Analysis Report</em>
+				<i class="line"></i>
+			</span>
+			<span class="sText">본 보고서는 핫플레이스25 사이트의 자동분석 기능을 활용하여 제작된 투자 참고자료로서 투자수익 등을 확약하지 않습니다. 세부적인 사항은 별도 확인이 필요합니다.</span>
+		</div>
+		<div class="indexUnit indexDate">
+			<span class="date">작성일 : 2018.00.00</span>
+		</div>
+
+
+		<div class="indexUnit indexLogo">
+			<span class="logo"><img src="img/pdfImg_logo_b.png"></span>
+		</div>
+
+		<div class="indexUnit indexFooter">
+			<span class="logo"><img src="img/pdfImg_logo_c.png"></span>
+			<span class="copyright">
+				<span class="adress">주소 : (05836)서울시 송파구 법원로127, 1108호(문정동, 대명벨리온)</span>
+				<span class="tel">전화 : 070-7117-6790</span>
+				<span class="fax">전화 : 070-7117-6790</span>
+			</span>
+		</div>
 	</div>
 	
 	<!-- /////////////////////////////////////// -->
