--- a/10_01_profit.html
+++ b/10_01_profit.html
@@ -302,7 +302,7 @@ String.prototype.getDecimalCount = function() {
 									<th>보유기간</th>
 									<td>
 										<div class="spinner" style="width:;">
-											<input type="text" class="inp readonly" value="2년" id="" data-value="2" data-min="0" data-max="10" data-step="0.5" data-suffix="년">
+											<input type="text" class="inp readonly txtProfitTooltip" title="보유기간" value="2년" id="" data-value="2" data-min="0" data-max="10" data-step="0.5" data-suffix="년">
 											<div class="btn-vertical" data-fn="">
 												<button class="btn" type="button"></button>
 												<button class="btn" type="button"></button>
