--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ $(document).ready( function() {
 
 	//modal modalCompany
 	$('#modalCompany').on('click', function(e) {	
-		commonPopup('70_03_company.html', '', '900');
+		commonPopup('70_03_company.html', '', '1000');
 	});
 
 
@@ -369,7 +369,7 @@ var rdchBoxSetId = function(tId, name) {
 					<ul class="dropMenuBox">
 						<li><a href="#" class="link" id="modalMypage">My Page</a></li>
 						<li><a href="#" class="link" id="modalNotice">공지사항</a></li>
-						<li><a href="#" class="link" id="modalCompany">회사소개</a></li>
+						<li><a href="#" class="link" id="modalCompany">서비스 소개</a></li>
 						<li><a href="#" class="link" id="modalContactUs">Contact us</a></li>
 					</ul>
 				</div>
