--- a/z_z_index.html
+++ b/z_z_index.html
@@ -156,7 +156,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 </div>
 
 <!-- 주소검색 -->
-<div id="inc_01" class="codeList" style="display:;">
+<div id="inc_01" class="codeList" style="display:none;">
 	<ul>
 		<li class="ulHead">
 			<span>구분</span>
@@ -423,7 +423,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 </div>
 
 <!-- contact us -->
-<div id="inc_07" class="codeList" style="display:none;">
+<div id="inc_07" class="codeList" style="">
 	<ul>
 		<li class="ulHead">
 			<span>구분</span>
@@ -452,7 +452,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 		</li>
 		<li>
 			<span>회사소개</span>
-			<span class="link"  data-type="modal" data-width="900">70_03_company.html</span>
+			<span class="link"  data-type="modal" data-width="1000">70_03_company.html</span>
 			<span class="ex">회사소개</span>
 			<span class="end">미완성</span>
 			<span class="date"></span>
