--- a/70_03_company.html
+++ b/70_03_company.html
@@ -180,9 +180,9 @@ $(document).ready( function() {
 						<!-- 이용요금 안내 -->
 						<div class="unit">							
 							<div class="unit_tit">
-								<span class="sTit color_black noBullt">이용요금 안내</span>
+								<span class="sTit color_black noBullt">서비스 이용 안내 (이코노미/스마트/프리미엄)</span>
 							</div>
-							<div class="unit_cont bgWhite">
+							<div class="unit_cont bgWhite companyImgTable">
 								<table class="tableStyle gridStyle  topBold center">
 									<colgroup>
 										<col style="width:10%;">
@@ -194,14 +194,14 @@ $(document).ready( function() {
 									<thead>
 										<tr>
 											<th colspan="2" class="center">구분</th>
-											<th class="center">일반회원</th>
+											<th class="center">이코노미회원</th>
 											<th class="center">스마트회원</th>
 											<th class="center">프리미엄회원</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr>
-											<th rowspan="8" class="center">서비스</th>
+											<th rowspan="7" class="center">서비스</th>
 											<th class="center">주소검색</th>
 											<td>○</td>
 											<td>○</td>
@@ -220,7 +220,13 @@ $(document).ready( function() {
 											<td>○</td>
 										</tr>
 										<tr>
-											<th class="center">컨설팅(투자타당성) 의뢰</th>
+											<th class="center">위치보기</th>
+											<td>-</td>
+											<td>○</td>
+											<td>○</td>
+										</tr>
+										<tr>
+											<th class="center">히트맵보기</th>
 											<td>-</td>
 											<td>○</td>
 											<td>○</td>
@@ -234,55 +240,35 @@ $(document).ready( function() {
 										<tr>
 											<th class="center">경공매물건 검색</th>
 											<td>-</td>
-											<td>-</td>
-											<td>○</td>
-										</tr>
-										<tr>
-											<th class="center">위치보기</th>
-											<td>○</td>
-											<td>○</td>
-											<td>○</td>
-										</tr>
-										<tr>
-											<th class="center">히트맵보기</th>
-											<td>-</td>
 											<td>○</td>
 											<td>○</td>
 										</tr>
 
 
 										<tr>
-											<th rowspan="3" class="center">특전(혜택)</th>
+											<th rowspan="4" class="center">특전(혜택)</th>
 											<th class="center">투자유망물건 정보 메일링 서비스</th>
 											<td>-</td>
 											<td>-</td>
 											<td>○</td>
 										</tr>
 										<tr>
-											<th class="center">투자타당성검토 보고서 지원</th>
+											<th class="center">*추천 물건 의뢰 비용 지원 : <span class="font11 block">전문가 물건추천 및 평가서 발행</span> (100만 원/ 건)</th>
 											<td>-</td>
-											<td>연 1회 무료</td>
-											<td>연 2회 무료</td>
+											<td>연 1회 무료<br/>(100만 원 지원)</td>
+											<td class="bold">연 3회 무료<br/>(300만 원 지원)</td>
 										</tr>
 										<tr>
-											<th class="center">전문가 강의 지원</th>
-											<td>50% 할인</td>
-											<td>50% 할인</td>
+											<th class="center">도시계획기술사 주최<br/>유망 물건 소개 세미나<br/>참가비: 5만원/1인</th>
+											<td>20% 할인<br/>(4만원/1인)</td>
+											<td>50% 할인<br/>(2만5천원/1인)</td>
+											<td class="bold">중개사 및 동반 고객<br/>전원 무료</td>
+										</tr>
+										<tr>
+											<th class="center">도시계획기술사 주최<br/>유망 물건지 소개<br/>시크릿 미팅 (SM) 참석 자격</th>
+											<td>-</td>
+											<td>-</td>
 											<td>○</td>
-										</tr>
-
-										<tr>
-											<th rowspan="2" class="center">이용요금</th>
-											<th class="center">연회비</th>
-											<td>360만원/1년</td>
-											<td>720만원/1년</td>
-											<td>1천만원/1년</td>
-										</tr>
-										<tr>
-											<th class="center">투자타당성검토</th>
-											<td>300만원/건</td>
-											<td>210만원/건(30%할인)</td>
-											<td>150만원/건(50% 할인)</td>
 										</tr>
 									</tbody>
 								</table>
@@ -303,7 +289,7 @@ $(document).ready( function() {
 								<div class="center companyImg">
 									<img src="img/company_img_30.png"/>
 								</div>
-								<div class="center companyImgTable bgWhite  mgT20">
+								<div class="center bgWhite companyImgTable mgT20">
 								
 									<table class="tableStyle gridStyle topBold left">
 										<colgroup>
@@ -357,10 +343,8 @@ $(document).ready( function() {
 								</div>
 							</div>
 						</div>
-					</div>
-					<!-- //회사소개 -->
 
-					<!-- 오시는길 -->
+						<!-- 오시는길 -->
 						<div class="unit">							
 							<div class="unit_tit">
 								<span class="sTit color_black noBullt">오시는길</span>
@@ -380,13 +364,13 @@ $(document).ready( function() {
 										<strong class="color_blue"> FAX : </strong> 02)407-1394
 									</div>
 								</div>
-
-								
 							</div>
 						</div>
+
 					</div>
 					<!-- //회사소개 -->
 				</div>
+
 			</div>
 
 		</div>
