--- a/80_01_intro.html
+++ b/80_01_intro.html
@@ -14,8 +14,19 @@ $(document).ready( function() {
 		</div>
 
 		<div class="modal-body">
-			<div class="" style="height:500px;">
-				intro 작업 준비중입니다
+			<div class="dvIntro" style="height:540px;">
+				<div class="openImg">OPEN</div>
+				<div class="textBox">
+					<div class="mText">
+						데이터와 법률에 기반한 투자유망물건 정보 제공 사이트인 <strong class="color_red">HOTPLACE25</strong>를 방문해 주셔서 감사합니다.
+					</div>
+					<div class="mgT30">
+						본격서비스는 2018년 상반기에 시작할 예정이며,<br/>
+						현재는 로그인하신 회원분들에 한하여 일부서비스를<br/>
+						무료로 제공하고 있습니다.<br/> 
+						<strong class="color_red">HOTPLACE25</strong> 사이트를 방문하신 모든 분들의 성공투자를 기원합니다.
+					</div>
+				</div>
 			</div>
 		</div>
 		<!--<div class="modal-footer">
