--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@ $(document).ready( function() {
 		commonPopup('70_04_contact.html', '', '600');
 	});
 
+	//////////////////////////////////////////////////	
+	//modal intro
+	//commonPopup('80_01_intro.html', '', '600');
+
 
 });
 
