--- a/z_z_index.html
+++ b/z_z_index.html
@@ -454,8 +454,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>회사소개</span>
 			<span class="link"  data-type="modal" data-width="1000">70_03_company.html</span>
 			<span class="ex">회사소개</span>
-			<span class="end">미완성</span>
-			<span class="date"></span>
+			<span class="end">완성</span>
+			<span class="date">2018.03.20</span>
 			<span class="etc"></span>
 		</li>
 		<li>
@@ -485,8 +485,8 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span>intro</span>
 			<span class="link"  data-type="modal" data-width="600">80_01_intro.html</span>
 			<span class="ex">intro</span>
-			<span class="end">미완성</span>
-			<span class="date"></span>
+			<span class="end">완성</span>
+			<span class="date">2018.03.20</span>
 			<span class="etc"></span>
 		</li>
 	</ul>
@@ -548,7 +548,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../css/map.css</span>
 			<span class="ex">실제 컨텐츠를 제어하는 css<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.03.02</span>
+			<span class="date">2018.03.20</span>
 			<span class="etc"></span>
 		</li>
 		
@@ -560,7 +560,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 			<span class="link">../js/main.js</span>
 			<span class="ex">실제 컨텐츠를 제어하는 js<br/> 실제 모습을 재정의의 가장 많이 수정되는 파일</span>
 			<span class="end">수정</span>
-			<span class="date">2018.03.02</span>
+			<span class="date">2018.03.20</span>
 			<span class="etc"></span>
 		</li>
 
@@ -685,7 +685,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 
 		$('.codeList li span.date').each(function() {
 			var text = $(this).text();
-			if (text == '2018.03.02') {
+			if (text == '2018.03.20') {
 				$(this).css( {
 					'background':'black',
 					'color':'#fff',
@@ -699,7 +699,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 		$('span.new').removeClass('open');
 		$('.codeList span.date').each(function() {
 			var text = $(this).text();			
-			if (text == '2018.03.02') {
+			if (text == '2018.03.20') {
 				var parents = $(this).parents('.codeList').attr('id');				
 				$('.' + parents).find('span.new').addClass('open');
 				return;
