--- a/z_z_index.html
+++ b/z_z_index.html
@@ -65,7 +65,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 	<li class="" style="margin:0 0px 0 30px; background:#f1f1f1;"><a href="#" class="inc_30" name="inc_30">css, js<span class="new">N</span></a></li>
 	<li class="" style="background:#f1f1f1;"><a href="#" class="inc_31" name="inc_31">이미지<span class="new">N</span></a></li>
 </ul>
-<div id="inc_99" class="codeList" style="display:none;">
+<div id="inc_99" class="codeList" style=";">
 	<ul>
 		<li class="ulHead">
 			<span>구분</span>
@@ -423,7 +423,7 @@ h1 {padding:15px 20px; font-size:14px; background:#333336; color:#fff;}
 </div>
 
 <!-- contact us -->
-<div id="inc_07" class="codeList" style="">
+<div id="inc_07" class="codeList" style="display:none">
 	<ul>
 		<li class="ulHead">
 			<span>구분</span>
